fixtures/solidity/translated_semantic_tests/errors/error_static_calldata_uint_array_and_dynamic_array/error_static_calldata_uint_array_and_dynamic_array.sol
contract C {
    error E(uint[], uint[1]);
    // This case used to be affected by the buggy cleanup due to ABIEncoderV2HeadOverflowWithStaticArrayCleanup bug.
    function f(uint[] memory a, uint[1] calldata b) public {
        revert E(a, b);
    }
}